--- a/src/2C.md
+++ b/src/2C.md
@@ -1,14 +1,21 @@
 # 強 2♣
 
-因為本制度的 2♣ 開叫中的平均牌皆能迫叫成局，我主張採用
-[Chris Ryall 的後續][chris]。而且我們還不需要其中三門牌組的特約，因為這些牌本制度大部份會開叫 1♣。
+| 2♣- | 21+ |
+|-----|-----|
+| 2♦! | 0--7
+| 2♥♠ | 8+, 5 張以上
+| 2NT | 8+ 無 5 張高花或 6 張低花
+| 3♣♦ | 8+, 6 張以上
+| 3♥! | SPL, 8+, 0--1♥, 0--3♠, 4--5♦, 4--5♣
+| 3♠! | SPL, 8+, 0--1♠, 0--3♥, 4--5♦, 4--5♣
 
-[chris]: https://chrisryall.net/bridge/two/clubs.htm
+## 負性 2♦
 
-| 2♣-   | 21+ |
-|-------|-----|
-| 2♦!   | (R) 對兩高花均邀請以上
-| 2♥!   | P/C 不能邀請紅心
-| 2♠!   | P/C 能邀請紅心，但不能邀請黑桃
-| 2NT!  | S/T, 獨門 6 張 AKQ 或 7 張 AKJ 以上
-| 3♣♦♥♠ | S/T, 獨門 6 張 KQ 或 7 張 KJ 以上
+因為 2♣ 開叫中的平均牌皆能迫叫成局，本制度不需要再約定 double negative。答叫人持極弱牌可以
+pass 不迫叫的開叫人再叫。
+
+| 2♣-2♦ | 0--7 |
+|-------|------|
+| 2♥♠   | 21--23, 5 張以上
+| 2NT   | 任意迫叫成局
+| 3♣♦   | 21--23, 6 張以上
