--- a/src/2C.md
+++ b/src/2C.md
@@ -1,14 +1,39 @@
 # 強 2♣
 
 因為本制度的 2♣ 開叫中的平均牌皆能迫叫成局，我主張採用
-[Chris Ryall 的後續][chris]。而且我們還不需要其中三門牌組的特約，因為這些牌本制度大部份會開叫 1♣。
+[Chris Ryall 的後續][chris]。開叫人通常已經有自己的牌組了，所以答叫人有好牌組再叫即可。
 
 [chris]: https://chrisryall.net/bridge/two/clubs.htm
 
 | 2♣-   | 21+ |
 |-------|-----|
-| 2♦!   | (R) 對兩高花均邀請以上
-| 2♥!   | P/C 不能邀請紅心
-| 2♠!   | P/C 能邀請紅心，但不能邀請黑桃
+| 2♦!   | (R), 對兩高花均迫叫成局
+| 2♥!   | P/C, 不能對紅心迫叫成局
+| 2♠!   | P/C, 能對紅心迫叫成局，但對黑桃不能
 | 2NT!  | S/T, 獨門 6 張 AKQ 或 7 張 AKJ 以上
 | 3♣♦♥♠ | S/T, 獨門 6 張 KQ 或 7 張 KJ 以上
+
+## 半正性 2♦
+
+這是最常見的答叫了。因為答叫人保證對高花牌組都能迫叫成局，所以開叫人的 2♥♠ 不需要限制力量。
+
+| 2♣-2♦ | (R) |
+|-------|-----|
+| 2♥♠   | 5 張以上牌組，力量不限
+| 2NT   | 迫叫成局，無 5 張高花
+| 3♣♦   | 21--23, 6 張以上牌組
+| 3♥!   | 迫叫成局，6 張以上梅花
+| 3♠!   | 迫叫成局，6 張以上方塊
+| 3NT!  | 選擇成局，低花 5+ 4+
+
+## 負性 2♥♠
+
+強 2♣ 的本質是合併強二開叫的 Multi 類特約，所以 pass or correct 的答叫也是很合理的設計。注意這裡開叫人的
+2NT 可能有 5 張高花了，所以最好約定能問出 5 張高花的 Stayman 版本，例如 Romex Stayman。
+
+| 2♣-2♥♠ | P/C |
+|--------|-----|
+| 2♠     | 21--23, 5 張以上
+| 2NT    | 迫叫成局，可能有 5 張高花
+| 3♣♦    | 21--23, 6 張以上
+| 3♥♠    | 迫叫成局，6 張以上
