--- a/src/1C/1D.md
+++ b/src/1C/1D.md
@@ -4,18 +4,18 @@
 1♣ 開叫能向上涵蓋 21--23 點無特定牌組的強牌，減輕其他花色開叫及 2♣ 的負擔。
 
 |  力量  | 形狀 |
-|-------|------|
-| 0--6  | 任意
-| 7--11 | 無四張高花，通常為不平均牌
-| 12+   | 無四張高花
+|--------|------|
+| 0--7   | 任意
+| 8--11  | 不平均 5+♦、無 5 張高花
+| 12+    | 4+♦ 可能有較短高花
 
 開叫人再叫 2♦ 作為人為倒叫，收錄最強的近平均牌。方塊倒叫本來就很難拿捏，乾脆直接拋棄。這也導致了本制度
 (xx)45 常常要改開 1♦。
 
 注意這裡開叫人持低限平均牌不可以叫 1NT，而是選擇 5 張梅花或 3 張高花。
 
-| 1♣-1♦ | 4+♦ 或 0--11 |
-|-------|--------------|
+| 1♣-1♦ | 4+♦ 或 0--7 |
+|-------|-------------|
 | 1♥♠   | 11--17, 3+#
 | 1NT   | 18--20, 2--6♣, 2--4♠, 2--4♥, 2--4♦
 | 2♣    | 11--17, 5+♣
